# AILib

./: CMakeLists.txt
inc/: ann.h  ga.h  mat.h
src/: ann.c  ga.c  mat.c
test/src/: main.c
