CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(AILib)

FILE(GLOB SRCS "${CMAKE_SOURCE_DIR}/src/*.c")
FILE(GLOB TEST_SRCS "${CMAKE_SOURCE_DIR}/test/src/*.c")

ADD_LIBRARY(ai STATIC ${SRCS})
TARGET_INCLUDE_DIRECTORIES(ai PUBLIC ${CMAKE_SOURCE_DIR}/inc)

ADD_EXECUTABLE(ai_test ${TEST_SRCS})
TARGET_LINK_LIBRARIES(ai_test ai)